--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <a href="https://nizamsaltan.com/"><h2 onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)">Mehmet Nizam Saltan</h2></a>
         <ul onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)" class="header">
-            <li><a href="https://sketchfab.com/niizam" >3D Work</a></li>
+            <li><a href="https://sketchfab.com/nizamsaltan" >3D Work</a></li>
             <li><a href="https://github.com/nizamsaltan">Projects</a></li>
             <li><a href="https://medium.com/@NizamSaltan" target="blank">Blog</a></li>
         </ul>
