--- a/arch_linux_for_desktop_users.html
+++ b/arch_linux_for_desktop_users.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Asd</title>
+  <title>Arch Linux for Desktop Users</title>
   <link rel="stylesheet" href="https://stackedit.io/style.css" />
 </head>
 
