--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
     <link rel="stylesheet" href="css/home.css">
     <title>Mehmet Nizam Saltan</title>
@@ -13,15 +10,14 @@
 <body onmousedown="mouseDown()" onmouseup="mouseUp()">
     <div class="cursor"></div>
     <header>
-        <a href="https://nizamsaltan.com/"><h2 onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)">Mehmet Nizam Saltan</h2></a>
+        <a href="mailto:nizamsaltan@protonmail.com"><h2 onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)">nizamsaltan@protonmail.com</h2></a>
         <ul onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)" class="header">
-            <li><a href="https://sketchfab.com/nizamsaltan" >3D Work</a></li>
-            <li><a href="https://github.com/nizamsaltan">Projects</a></li>
+            <!-- <li><a href="https://sketchfab.com/nizamsaltan" >3D Work</a></li> -->
             <li><a href="https://medium.com/@NizamSaltan" target="blank">Blog</a></li>
+            <li><a href="https://github.com/nizamsaltan">GitHub</a></li>
         </ul>
     </header>
-    <h1 onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)" >Hello</h1>
-    <p class="about-text" onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)">Based in Turkey. Passionate about<br>programming and motorcycle sports.<br>Fan of minimalist art.</p>
+    <h1 onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)" >Author of <span><a href="./arch_linux_for_desktop_users">Arch Linux For Desktop Users</a></span><br> Passionate about 3D graphics.<br> Fan of minimalist art.</h1>
     <ul class="social" onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)">
         <li><a href="https://www.youtube.com/channel/UCyJN487C64xfTweWEl1-zZA" target="blank"><i class="fi fi-brands-youtube"></i></a></li>
         <li><a href="https://www.instagram.com/nizam.3d/" target="blank"><i class="fi fi-brands-instagram"></i></a></li>
