--- a/index.html
+++ b/index.html
@@ -1,60 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mehmet Nizam Portfolio</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <body>
-    <div class="nav-bar">
-      <div class="email">
-        <a href="mailto:nizamsaltan@protonmail.com"
-          >nizamsaltan@protonmail.com</a
-        >
-      </div>
-      <div class="nav-links">
-        <hr class="nav-link-separator" />
-        <a href="https://github.com/nizamsaltan/" target="_blank">GITHUB</a>
-        <hr class="nav-link-separator" />
-        <a href="https://medium.com/@NizamSaltan" target="_blank">BLOG</a>
-        <hr class="nav-link-separator" />
-        <a href="https://www.youtube.com/@nizamsaltan" target="_blank"
-          >YOUTUBE</a
-        >
-      </div>
-    </div>
-    <div class="hero-page">
-      <div class="content">
-        <div class="left-section">
-          <!-- <img src="cube-design.png" alt="Geometric Cube Design" /> -->
-          <div id="container"></div>
-          <script src="app.js"></script>
-        </div>
-        <div class="right-section">
-          <p class="greeting">hi there 👋</p>
-          <hr class="orange-line" />
-          <h1>
-            i am <span>mehmet nizam saltan</span>, a computer science student
-            based in berlin, deutschland
-          </h1>
-        </div>
-      </div>
-      <div class="hero-page-bottom">
-        <p>SCROLL, THERE IS MORE TO SEE!</p>
-        <div class="mouse-icon"></div>
-      </div>
-    </div>
-    <div class="about">
-      <p>Hey this is more content</p>
-      <p>Hey this is more content</p>
-      <p>Hey this is more content</p>
-      <p>Hey this is more content</p>
-    </div>
-  </body>
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.png"><title>Doğusan Grup</title><script defer="defer" src="/js/chunk-vendors.0cc2eede.js"></script><script defer="defer" src="/js/app.5c7ea868.js"></script><link href="/css/app.37523825.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but dogusan-grup-web doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
